tests/baselines/reference/unusedImports10.errors.txt
unusedImports10.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
unusedImports10.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
unusedImports10.ts(9,12): error TS6133: 'a' is declared but its value is never read.


==== unusedImports10.ts (3 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Calculator {
            public handelChar() {
            }
        }
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A;
               ~
!!! error TS6133: 'a' is declared but its value is never read.
    }